--- a/views/layout/edit.ejs
+++ b/views/layout/edit.ejs
@@ -1,15 +1,19 @@
-<form id="myForm" action="/books/<%= element.id%>?_method=PUT" action="POST">
-    <label for="title">
-        <input type="text" id="title" name="title" value="<%= element.title%>">
-    </label>
-    <label for="author">
-        <input type="text" id="author" name="author" value="<%= element.author%>">
-    </label>
-    <label for="image">
-        <input type="text" id="image" name="image" value="<%= element.img%>">
-    </label>
-    <label for="description">
-        <input type="text" id="description" name="description" value="<%= element.description%>">
-    </label>
-    <button type="submit">Update</button>
-</form>
+<div class="loginPopup">
+    <div class="formPopup" id="popupForm">
+        <form action="/action_page.php" class="formContainer">
+            <label for="title">
+                <input type="text" id="title" name="title" value="<%= element.title%>">
+            </label>
+            <label for="author">
+                <input type="text" id="author" name="author" value="<%= element.author%>">
+            </label>
+            <label for="image">
+                <input type="text" id="image" name="image" value="<%= element.img%>">
+            </label>
+            <label for="description">
+                <input type="text" id="description" name="description" value="<%= element.description%>">
+            </label>
+            <button id="book-button" type="submit">Update</button>
+        </form>
+    </div>
+</div>
