--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -398,6 +398,10 @@ footer ul li a {
         background-color: black;
         color: #f5f5f5;
     }
+
+    #details_form {
+      padding:0;
+    }
    
     #book{
         display: flex;
