--- a/views/layout/edit.ejs
+++ b/views/layout/edit.ejs
@@ -1,6 +1,6 @@
 <div class="loginPopup">
     <div class="formPopup" id="popupForm">
-        <form action="/action_page.php" class="formContainer">
+        <form action="/books/<%= element.id%>?_method=PUT" method="POST" class="formContainer">
             <label for="title">
                 <input type="text" id="title" name="title" value="<%= element.title%>">
             </label>
@@ -13,7 +13,7 @@
             <label for="description">
                 <input type="text" id="description" name="description" value="<%= element.description%>">
             </label>
-            <button id="book-button" type="submit">Update</button>
+            <button type="submit">Update The Book</button>
         </form>
     </div>
 </div>
